feat: Added venv files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,136 @@ ui-tests/.pnp.*
 .ppenv/share/man/man1/ipython.1
 .ppenv/share/man/man1/isympy.1
 .ppenv/share/man/man1/ttx.1
+.ppenv/etc/jupyter/nbconfig/notebook.d/widgetsnbextension.json
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/install.json
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/package.json
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/schemas/@jupyter-widgets/jupyterlab-manager/package.json.orig
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/schemas/@jupyter-widgets/jupyterlab-manager/plugin.json
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/39.1949673a9fd9c144c15b.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/327.68dbf8491690b3aff1e7.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/420.68e690774ec05e4e9665.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/439.33696bc45fbd403becbb.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/439.33696bc45fbd403becbb.js.LICENSE.txt
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/446.fdf8b1b233cb8c1783f6.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/586.f9a8b8b4dd029695640b.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/647.e39f528c8fee8adb9110.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/651.fe40a967a60b543cf15c.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/651.fe40a967a60b543cf15c.js.LICENSE.txt
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/701.043aefe0b66133629348.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/722.3fefeac9cae358348cbc.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/727.2abc0b27bd0932fb5f81.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/898.402374e73a78886eba74.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/remoteEntry.5586bbdee77c5d90dd3c.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/style.js
+.ppenv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/third-party-licenses.json
+.ppenv/share/jupyter/nbextensions/jupyter-js-widgets/extension.js
+.ppenv/share/jupyter/nbextensions/jupyter-js-widgets/extension.js.LICENSE.txt
+.ppenv/share/jupyter/nbextensions/jupyter-js-widgets/extension.js.map
+Panda_freqPanda_hor2048_learn0.001_episodes200_controlOSC_POSE/PPO_1/events.out.tfevents.1723447148.tobi-desktop.684.0
+.venv/lib64
+.venv/pyvenv.cfg
+.venv/bin/activate
+.venv/bin/activate.csh
+.venv/bin/activate.fish
+.venv/bin/Activate.ps1
+.venv/bin/ale-import-roms
+.venv/bin/AutoROM
+.venv/bin/convert-caffe2-to-onnx
+.venv/bin/convert-onnx-to-caffe2
+.venv/bin/debugpy
+.venv/bin/f2py
+.venv/bin/fonttools
+.venv/bin/ipython
+.venv/bin/ipython3
+.venv/bin/isympy
+.venv/bin/jupyter
+.venv/bin/jupyter-kernel
+.venv/bin/jupyter-kernelspec
+.venv/bin/jupyter-migrate
+.venv/bin/jupyter-run
+.venv/bin/jupyter-troubleshoot
+.venv/bin/markdown_py
+.venv/bin/markdown-it
+.venv/bin/normalizer
+.venv/bin/numba
+.venv/bin/pip
+.venv/bin/pip3
+.venv/bin/pip3.11
+.venv/bin/proton
+.venv/bin/proton-viewer
+.venv/bin/pyftmerge
+.venv/bin/pyftsubset
+.venv/bin/pygmentize
+.venv/bin/python
+.venv/bin/python3
+.venv/bin/python3.11
+.venv/bin/tensorboard
+.venv/bin/torchrun
+.venv/bin/tqdm
+.venv/bin/ttx
+.venv/etc/jupyter/nbconfig/notebook.d/widgetsnbextension.json
+.venv/include/site/python3.11/pygame/_blit_info.h
+.venv/include/site/python3.11/pygame/_camera.h
+.venv/include/site/python3.11/pygame/_pygame.h
+.venv/include/site/python3.11/pygame/_surface.h
+.venv/include/site/python3.11/pygame/camera.h
+.venv/include/site/python3.11/pygame/font.h
+.venv/include/site/python3.11/pygame/freetype.h
+.venv/include/site/python3.11/pygame/mask.h
+.venv/include/site/python3.11/pygame/mixer.h
+.venv/include/site/python3.11/pygame/palette.h
+.venv/include/site/python3.11/pygame/pgarrinter.h
+.venv/include/site/python3.11/pygame/pgbufferproxy.h
+.venv/include/site/python3.11/pygame/pgcompat.h
+.venv/include/site/python3.11/pygame/pgopengl.h
+.venv/include/site/python3.11/pygame/pgplatform.h
+.venv/include/site/python3.11/pygame/pygame.h
+.venv/include/site/python3.11/pygame/scrap.h
+.venv/include/site/python3.11/pygame/simd_blitters.h
+.venv/include/site/python3.11/pygame/surface.h
+.venv/include/site/python3.11/pygame/include/_pygame.h
+.venv/include/site/python3.11/pygame/include/bitmask.h
+.venv/include/site/python3.11/pygame/include/pgcompat.h
+.venv/include/site/python3.11/pygame/include/pgimport.h
+.venv/include/site/python3.11/pygame/include/pgplatform.h
+.venv/include/site/python3.11/pygame/include/pygame_bufferproxy.h
+.venv/include/site/python3.11/pygame/include/pygame_font.h
+.venv/include/site/python3.11/pygame/include/pygame_freetype.h
+.venv/include/site/python3.11/pygame/include/pygame_mask.h
+.venv/include/site/python3.11/pygame/include/pygame_mixer.h
+.venv/include/site/python3.11/pygame/include/pygame.h
+.venv/include/site/python3.11/pygame/include/sse2neon.h
+.venv/share/jupyter/kernels/python3/kernel.json
+.venv/share/jupyter/kernels/python3/logo-32x32.png
+.venv/share/jupyter/kernels/python3/logo-64x64.png
+.venv/share/jupyter/kernels/python3/logo-svg.svg
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/install.json
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/package.json
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/schemas/@jupyter-widgets/jupyterlab-manager/package.json.orig
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/schemas/@jupyter-widgets/jupyterlab-manager/plugin.json
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/39.1949673a9fd9c144c15b.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/327.68dbf8491690b3aff1e7.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/420.68e690774ec05e4e9665.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/439.33696bc45fbd403becbb.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/439.33696bc45fbd403becbb.js.LICENSE.txt
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/446.fdf8b1b233cb8c1783f6.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/586.f9a8b8b4dd029695640b.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/647.e39f528c8fee8adb9110.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/651.fe40a967a60b543cf15c.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/651.fe40a967a60b543cf15c.js.LICENSE.txt
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/701.043aefe0b66133629348.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/722.3fefeac9cae358348cbc.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/727.2abc0b27bd0932fb5f81.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/898.402374e73a78886eba74.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/remoteEntry.5586bbdee77c5d90dd3c.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/style.js
+.venv/share/jupyter/labextensions/@jupyter-widgets/jupyterlab-manager/static/third-party-licenses.json
+.venv/share/jupyter/nbextensions/jupyter-js-widgets/extension.js
+.venv/share/jupyter/nbextensions/jupyter-js-widgets/extension.js.LICENSE.txt
+.venv/share/jupyter/nbextensions/jupyter-js-widgets/extension.js.map
+.venv/share/man/man1/ipython.1
+.venv/share/man/man1/isympy.1
+.venv/share/man/man1/ttx.1
+Panda_freqPanda_hor2048_learn0.001_episodes200_controlOSC_POSE/env.pkl
+Panda_freqPanda_hor2048_learn0.001_episodes200_controlOSC_POSE/model.zip
+Panda_freqPanda_hor2048_learn0.001_episodes200_controlOSC_POSE/PPO_1/events.out.tfevents.1723463083.tobi-desktop.565.0
